--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -26,6 +26,22 @@ body {
     @apply text-zinc-100;
 }
 
+h1 {
+    @apply text-xl font-bold;
+}
+
+h2 {
+    @apply text-xl font-bold;
+}
+
+h3 {
+    @apply text-lg font-bold;
+}
+
+h4 {
+    @apply text-base font-bold;
+}
+
 @layer base {
     :root {
         --background: 0 0% 100%;
