add channel liking

--- a/src/app/global.tw.css
+++ b/src/app/global.tw.css
@@ -78,4 +78,12 @@
   h4 {
     @apply text-base font-bold;
   }
+
+  button {
+    @apply cursor-pointer;
+  }
+
+  a {
+    @apply cursor-pointer;
+  }
 }
