--- a/src/app/global.tw.css
+++ b/src/app/global.tw.css
@@ -43,14 +43,13 @@
   }
 
   html {
-    @apply flex flex-col items-center w-full h-svh bg-zinc-800;
+    @apply flex flex-col items-center w-full min-h-svh h-svh max-h-svh bg-zinc-800;
   }
 
   body {
-    @apply flex flex-col w-full lg:max-w-2xl h-svh bg-background text-foreground;
+    @apply flex flex-col w-full lg:max-w-2xl min-h-svh h-svh max-h-svh bg-background text-foreground;
 
     & > header {
-      min-height: var(--app-header-h);
       @apply w-full overflow-hidden;
     }
 
@@ -60,13 +59,8 @@
     }
 
     & > footer {
-      min-height: var(--app-footer-h);
       @apply w-full overflow-hidden;
     }
-  }
-
-  body > footer nav {
-    min-height: var(--app-nav-h);
   }
 
   .lucide {
