--- a/src/app/global.tw.css
+++ b/src/app/global.tw.css
@@ -47,7 +47,7 @@
   }
 
   body {
-    @apply flex flex-col w-full lg:max-w-2xl min-h-svh h-svh max-h-svh bg-background text-foreground;
+    @apply flex flex-col w-full min-h-svh h-svh max-h-svh bg-background text-foreground;
 
     & > header {
       @apply w-full overflow-hidden;
